--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -1,4 +1,4 @@
-/*
+﻿/*
 Theme Name: Twenty Seventeen
 Theme URI: https://wordpress.org/themes/twentyseventeen/
 Author: the WordPress team
@@ -1915,8 +1915,10 @@ body.page:not(.twentyseventeen-front-page) .entry-title {
 
 .entry-title a {
 	color: #333;
-	text-decoration: none;
-	margin-left: -2px;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+    margin-left: -2px;
 }
 
 .entry-title:not(:first-child) {
@@ -2556,7 +2558,6 @@ h2.widget-title {
 .widget ul li,
 .widget ol li {
 	border-bottom: 1px solid #ddd;
-	border-top: 1px solid #ddd;
 	padding: 0.5em 0;
 }
 
@@ -2698,6 +2699,32 @@ h2.widget-title {
 	margin: 0.5em 0 1.5em;
 	padding: 0;
 }
+.topview ul {
+    counter-reset: my-badass-counter;
+    border: 1px solid #a59494;
+    padding: 10px 10px;
+    box-shadow: 0 0 12px 4px #6c6363;
+}
+.topview li:before {
+    content: counter(my-badass-counter);
+    counter-increment: my-badass-counter;
+    padding: 5px 15px 8px 0;
+    line-height: 1em;
+    color: #7f7f7f;
+    font-weight: bold;
+    color: #A6A6A6;
+    float: left;
+}
+.topview li {
+    clear: both;
+    margin: 10px 0;
+    overflow: hidden;
+}
+.topview img {
+    float: left;
+    margin-right: 5px;
+    width: 50px;
+ }
 
 .widget_rss .rssSummary {
 	margin-bottom: 0.5em;
@@ -2729,6 +2756,11 @@ h2.widget-title {
 
 .widget_recent_entries .post-date {
 	display: block;
+}
+.widget_recent_entries ul{
+	border: 1px solid #a59494;
+    padding: 10px 10px;
+    box-shadow: 0 0 12px 4px #6c6363;
 }
 
 /* Search */
@@ -3855,6 +3887,10 @@ p > object:only-child {
 	body.page-two-column #comments {
 		float: right;
 		width: 58%;
+	}
+	.entry-content{
+		border-bottom: 2px solid;
+  		padding-bottom: 27px;
 	}
 
 	.blog .site-main > article,
